Random number generator and indicator

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <div>
-      EDIT ME!
+      <p id="temperature"></p>
+      <p id="temp-indicator"></p>
     </div>
     <script src="./script.js"></script>
   </body>
