--- a/index.html
+++ b/index.html
@@ -2,12 +2,40 @@
 <html>
   <head>
     <title>SPARTA Milestone 2</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Dengan bootstrap ini websitenya uda responsive -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- Kalau misal ada tambahan styling bs d tambah d bwh -->
+    <link rel="stylesheet" href="./styles.css" type="text/css"/>
   </head>
   <body>
-    <div>
-      <p id="temperature"></p>
-      <p id="temp-indicator"></p>
+    <div class="jumbotron text-center">
+      <h1>Solusi Badan Ketahanan Pangan</h1>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-4 d-flex justify-content-center">
+          <div class="content">
+            <h3>Temperature</h3>
+            <p id="temperature"></p>
+            <p id="temp-indicator"></p>
+          </div>
+        </div>
+        <div class="col-sm-4 d-flex justify-content-center">
+          <div class="content">
+            <h3>Water level</h3>
+            <p id="water">Testing</p>
+            <p id="water-indicator">testing</p>
+          </div>
+        </div>
+        <div class="col-sm-4 d-flex justify-content-center">
+          <div class="content">
+            <h3>Soil quality</h3>
+            <p id="soil">Testing again</p>
+            <p id="soil-indicator">again</p>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="./script.js"></script>
   </body>
