--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="jumbotron text-center">
-      <h1>Solusi Badan Ketahanan Pangan</h1>
+      <h1>Solusi Ketahanan Pangan di Indonesia</h1>
     </div>
     <div class="container-fluid">
       <div class="row">
