Hotfix delete button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="modal-dialog">
         <!-- Modal content-->
         <div class="modal-content">
-          <div class="modal-body">
+          <div class="modal-body" id="modal-body">
             <div class= "content">
               Contoh ya
               <p id="temperature"></p>
@@ -60,10 +60,6 @@
             <div>
                 Kualitas tanah
             </div>
-
-            <button id="delete-plot" data-dismiss="modal">
-              Delete Plot
-            </button>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
