ini logic suhu ya

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
             <div>
                 Pencahayaan
             </div>
-            <div>
+            <div class = "content" > 
                 Suhu
+                <p id="suhu"></p>
+                <p id="ind-suhu"></p>
             </div>
             <div>
                 Kualitas tanah
