--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
             <div>
                 Pencahayaan
             </div>
-            <div class = "content" > 
-                Suhu
-                <p id="suhu"></p>
-                <p id="ind-suhu"></p>
+            <div class = "content" style="background-color:blue;color:white;padding:20px;"> 
+              <img src="Termo.gif" align="left" style="width:60px;height:120px;margin: 0px 0px 0px 0px;">
+              <h2 style="text-align:center">Suhu</h2>
+                <p style="text-align:center" id="suhu">
+                <p style="text-align:center" id="ind-suhu">
             </div>
             <div>
                 Kualitas tanah
