kadar nutrisi diganti jadi kadar pH

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
             <div>
                 Kelembapan 
             </div>
-            <div>
-                Kadar nutrisi
+            <div class="content">
+                Kadar pH
+                <p id="ph"></p>
+                <p id="ph-indicator"></p>
             </div>
             <div>
                 Pencahayaan
