Udah diedit dikit indikatornya+ngerapihin dikit

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <!-- Di bawah ini yang tolong dikerjakan ya gengs -->
             <div>
                 Kelembapan 
-                <p id="percentage"></p>
-                <p id="indicator"></p>
+                <p id="humidity"></p>
+                <p id="humidity-indicator"></p>
             </div>
             <div>
                 Kadar nutrisi
