Kualitas tanah diganti persen nitrogen, branch ini jadinya

--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
             <div>
                 Suhu
             </div>
-            <div>
-                Kualitas tanah
+            <div class ="content">
+                Persentase Nitrogen (%)
+                <p id="N"></p>
+                <p id="N-indicator"></p>
+                <script src="./script.js"></script>
             </div>
           </div>
           <div class="modal-footer">
