--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
                 Kelembapan 
             </div>
             <div class="content">
-                Kadar pH
-                <p id="ph"></p>
-                <p id="ph-indicator"></p>
+              <h2 style="text-align:center">Kadar pH</h2>
+              <p style="text-align:center" id="ph"></p>
+              <p style="text-align:center" id="ph-indicator"></p>
             </div>
             <div>
                 Pencahayaan
             </div>
-            <div class = "content" style="background-color:blue;color:white;padding:20px;"> 
+            <div class = "content"> 
               <img src="Termo.gif" align="left" style="width:60px;height:120px;margin: 0px 0px 0px 0px;">
               <h2 style="text-align:center">Suhu</h2>
-                <p style="text-align:center" id="suhu">
-                <p style="text-align:center" id="ind-suhu">
+              <p style="text-align:center" id="suhu">
+              <p style="text-align:center" id="ind-suhu">
             </div>
             <div>
                 Kualitas tanah
