--- a/index.html
+++ b/index.html
@@ -1,34 +1,51 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SPARTA Milestone 2</title>
+    <title>Panen - Smart Farming System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Dengan bootstrap ini websitenya uda responsive -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <!-- Kalau misal ada tambahan styling bs d tambah d bwh -->
     <link rel="stylesheet" href="./styles.css" type="text/css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
 
   <body>
-    <div class="jumbotron text-center">
-      <h1 class="text-white">Smart Farming</h1>
-    </div>
+    <!-- Landing Page -->
+    <div class="col-12 landing-page" style="padding: 3em;">
+      <div class="row container-fluid">
+        <div class="col-6 justify-content-center align-self-center">
+          <h1 class="text-gray title" style="font-size: 4em;">Smart Farming System</h1>
+          <p style="text-align: justify; font-size: 18px; margin-top: 1em; margin-bottom: 1em;">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+          </p>
+          <div class="text-center">
+            <a href="#content"><button class="btn start-button" style="font-size: 1em;">Start Now </Start><i class="fa fa-arrow-right" aria-hidden="true"></i></button></a>
+          </div>
+        </div>
 
-    <div class="container-fluid">
+        <div class="col-6">
+          <img class="img-fluid" src="./illust.png">
+        </div>
+
+      </div>
+    </div>
+    
+    <!-- Content -->
+    <div class="container-fluid plot-list-content w-75" id="content">
       <div class="row" id="plot-list">
-        <div class="col-sm-4 d-flex justify-content-center">
-          <button class="content button" onClick="addPlot()">
+          <!-- <button class="content button" onClick="addPlot()"> 
             <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="black" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z"/>
               <path fill-rule="evenodd" d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z"/>
               <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-            </svg>
-          </button>
-        </div>
+            </svg> 
+          </button> -->
       </div>
+      <button type ="button" class="plus-button float-right" onClick="addPlot()"><i class="fa fa-plus"></i></button>
     </div>
 
     <!-- Modal -->
@@ -37,37 +54,56 @@
         <!-- Modal content-->
         <div class="modal-content">
           <div class="modal-body" id="modal-body">
-            <div class= "content">
-              Contoh ya
-              <p id="temperature"></p>
-              <p id="temp-indicator"></p>
+            <div class="justify-content-center"><img class="plot-img" src="placeholder-modal.png"></div>
+            <div class="title" style="font-size: 24px;">Status Plot</div>
               <!-- Buat Logicnya tinggal di buka di script.js kalian tambah2in aja -->
-            </div>
 
             <!-- Di bawah ini yang tolong dikerjakan ya gengs -->
-            <div>
-                Kelembapan 
-            </div>
-            <div>
-                Kadar nutrisi
-            </div>
-            <div>
-                Pencahayaan
-            </div>
-            <div>
-                Suhu
-            </div>
-            <div>
-                Kualitas tanah
+            <div class="container-fluid col-12">
+              <div class="row">
+                <div class="col-4">
+                  <div class="title">Kelembapan</div>
+                  <div style="font-size: 1em;">76%</div>
+                </div>
+                <div class="col-4">
+                  <div class="title">Kadar Nutrisi</div>
+                  <div style="font-size: 1em;">76%</div>
+                </div>
+                <div class="col-4">
+                  <div class="title">Pencahayaan</div>
+                  <div style="font-size: 1em;">76%</div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-6">
+                  <div class="title">Suhu</div>
+                  <div style="font-size: 1em;">
+                    <p id="temperature"></p>
+                    Status :<p id="temp-indicator"></p>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="title">Kualitas Tanah</div>
+                  <div style="font-size: 1em;">76%</div>
+                </div>
+              </div>
             </div>
           </div>
+
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-default" style="border-color: red;" >Delete</button>
           </div>
         </div>
 
       </div>
     </div>
+
+    <div id="credits" class="credits">
+      Credits
+    </div>
+
 
     <script src="./script.js"></script>
   </body>
