Modal title added

--- a/index.html
+++ b/index.html
@@ -36,32 +36,35 @@
       <div class="modal-dialog">
         <!-- Modal content-->
         <div class="modal-content">
+          <div class="modal-header">
+            <h2 class="modal-title" id="modal-title"></h2>
+          </div>
           <div class="modal-body" id="modal-body">
 
             <!-- Di bawah ini yang tolong dikerjakan ya gengs -->
             <div class="content">
-              <h2 style="text-align:center">Kelembapan</h2>
+              <h4 style="text-align:center">Kelembapan</h4>
               <p style="text-align:center" id="humidity"></p>
               <p style="text-align:center" id="humidity-indicator"></p>
             </div>
             <div class="content">
-              <h2 style="text-align:center">Kadar pH</h2>
+              <h4 style="text-align:center">Kadar pH</h4>
               <p style="text-align:center" id="ph"></p>
               <p style="text-align:center" id="ph-indicator"></p>
             </div>
             <div class="content">
-              <h2 style="text-align:center">Pencahayaan</h2>
+              <h4 style="text-align:center">Pencahayaan</h4>
               <p style="text-align:center" id="Pencahayaan (Lux)"></p>
               <p style="text-align:center" id="Pencahayaan (Lux) - indicator"></p>
             </div>
             <div class = "content"> 
               <img src="Termo.gif" align="left" style="width:60px;height:120px;margin: 0px 0px 0px 0px;">
-              <h2 style="text-align:center">Suhu</h2>
+              <h4 style="text-align:center">Suhu</h4>
               <p style="text-align:center" id="suhu"></p>
               <p style="text-align:center" id="ind-suhu"></p>
             </div>
             <div class = "content">
-              <h2 style="text-align:center">Persentase Nitrogen</h2>
+              <h4 style="text-align:center">Persentase Nitrogen</h4>
               <p style="text-align:center" id="N"></p>
               <p style="text-align:center" id="N-indicator"></p>
             </div>
