--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Panen - Smart Farming System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Dengan bootstrap ini websitenya uda responsive -->
+    <link rel="icon" href="./illust.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <!-- Kalau misal ada tambahan styling bs d tambah d bwh -->
