--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="halfCell justify-content-center align-self-center">
           <h1 class="text-gray title smartTitle" style="font-size: 4em;">Smart Farming System</h1>
           <p class="smaller" style="text-align: justify; font-size: 18px; margin-top: 1em; margin-bottom: 1em;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            Sebuha solusi berbasis aplikasi sebagai upaya untuk mengatasi ketahanan pangan di Indonesia
           </p>
           <div class="text-center">
             <a href="#content"><button class="btn start-button" style="font-size: 1em;">Start Now </Start><i class="fa fa-arrow-right" aria-hidden="true"></i></button></a>
