--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="col-12 landing-page" style="padding: 3em;">
       <div class="row container-fluid lander">
         <div class="halfCell justify-content-center align-self-center">
-          <h1 class="text-gray title smartTitle" style="font-size: 4em;">Smart Farming System</h1>
+          <h1 class="text-gray title smartTitle" style="font-size: 4em;">Panen - A Smart Farming System</h1>
           <p class="smaller" style="text-align: justify; font-size: 18px; margin-top: 1em; margin-bottom: 1em;">
-            Sebuha solusi berbasis aplikasi sebagai upaya untuk mengatasi ketahanan pangan di Indonesia
+            Panen is an application that can allow you to grow crops flexibly anywhere and anytime.
           </p>
           <div class="text-center">
             <a href="#content"><button class="btn start-button" style="font-size: 1em;">Start Now </Start><i class="fa fa-arrow-right" aria-hidden="true"></i></button></a>
